# biz/sys/api/auth.go
@@ -11,13 +11,14 @@ type auth struct {
 	Username string `valid:"Required; MaxSize(50)"`
 	Password string `valid:"Required; MaxSize(50)"`
 }
-// @Summary Print
+// @Summary GetAuth
 // @Tags username  password
 // @Security Bearer
 // @Produce  json
-// @Param name path string true "username"
-// @Resource username
-// @Router /api/v1/auth?name={username}&password={password} [get]
+// @Param username path string true "username"
+// @Param password path string true "password"
+// @Resource username password
+// @Router /auth?name={username}&password={password} [get]
 // @Success 200 {object} utils.ReturnJSON
 func GetAuth(c *gin.Context) {
 
